{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 51,
  "lineage": "b7747ee1-1714-27c5-63ee-d14bb6a31847",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-1d4e7a66",
            "arn": "arn:aws:ec2:us-east-1:573869740900:instance/i-0b1ecf7661e66f2bc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b1ecf7661e66f2bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sombel-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f23a23b27c805d0f",
            "private_dns": "ip-10-0-1-197.ec2.internal",
            "private_ip": "10.0.1.197",
            "public_dns": "ec2-35-175-109-52.compute-1.amazonaws.com",
            "public_ip": "35.175.109.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-041f56515f296f671",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f0b3d990489545d6",
            "tags": {
              "Name": "Sombel_Ndiaye"
            },
            "tags_all": {
              "Name": "Sombel_Ndiaye"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0041c2a0a5b16832d"
            ]
          },
          "dependencies": [
            "aws_key_pair.sombel_key",
            "aws_security_group.web_and_ssh",
            "aws_subnet.subnet01",
            "aws_vpc.big_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573869740900:internet-gateway/igw-0e6f81a4c4db73f9c",
            "id": "igw-0e6f81a4c4db73f9c",
            "owner_id": "573869740900",
            "tags": {
              "Name": "Sombel_Ndiaye"
            },
            "tags_all": {
              "Name": "Sombel_Ndiaye"
            },
            "vpc_id": "vpc-0d7305341a9129823"
          },
          "dependencies": [
            "aws_vpc.big_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e6f81a4c4db73f9c",
            "id": "r-rtb-02461d352b88eaa6d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02461d352b88eaa6d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.rt01",
            "aws_vpc.big_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573869740900:route-table/rtb-02461d352b88eaa6d",
            "id": "rtb-02461d352b88eaa6d",
            "owner_id": "573869740900",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Sombel_Ndiaye"
            },
            "tags_all": {
              "Name": "Sombel_Ndiaye"
            },
            "vpc_id": "vpc-0d7305341a9129823"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.big_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0254da1a00def8ffb",
            "route_table_id": "rtb-02461d352b88eaa6d",
            "subnet_id": "subnet-0f0b3d990489545d6"
          },
          "dependencies": [
            "aws_route_table.rt01",
            "aws_subnet.subnet01",
            "aws_vpc.big_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_and_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573869740900:security-group/sg-0041c2a0a5b16832d",
            "description": "Allow web incgress trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0041c2a0a5b16832d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_and_ssh",
            "name_prefix": "",
            "owner_id": "573869740900",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Sombel_Ndiaye"
            },
            "tags_all": {
              "Name": "Sombel_Ndiaye"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7305341a9129823"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.big_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573869740900:subnet/subnet-0f0b3d990489545d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f0b3d990489545d6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573869740900",
            "tags": {
              "Name": "Sombel_Ndiaye"
            },
            "tags_all": {
              "Name": "Sombel_Ndiaye"
            },
            "vpc_id": "vpc-0d7305341a9129823"
          },
          "dependencies": [
            "aws_vpc.big_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "big_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573869740900:vpc/vpc-0d7305341a9129823",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fbf706e0a9204259",
            "default_route_table_id": "rtb-08915b179e6f9a2ac",
            "default_security_group_id": "sg-03ef32f44f3616433",
            "dhcp_options_id": "dopt-02199686483365445",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d7305341a9129823",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08915b179e6f9a2ac",
            "owner_id": "573869740900",
            "tags": {
              "Name": "Sombel_Ndiaye"
            },
            "tags_all": {
              "Name": "Sombel_Ndiaye"
            }
          }
        }
      ]
    }
  ]
}